@@ -3,6 +3,6 @@ AUX aufs-20070402-lhash.patch 1707 RMD160 17589fed81c0602db71e8937279200658e3bbc
 DIST aufs-20070402.tar.bz2 120097 RMD160 13f3a1cc7a581b1b96255262af01d90c3f601a22 SHA1 496b01279214d0a5836498ea233176e3424a3280 SHA256 c11e7c5835196873a60ac3ccae147ba4941239a0bee23beec8747bc95997eb62
 DIST aufs-20071125.tar.bz2 174584 RMD160 bac7b997a13979d1ada38654bdafe2084335c3aa SHA1 749d51a15703fc60bb913b435eec850eb060bc30 SHA256 f3422fd5861d1f6027f2cffaa36707b3bb22ec7c3484f10e833e51a5e11a56ce
 EBUILD aufs-20070402.ebuild 4164 RMD160 363ba107e92d07a02bf76a412c64d5846231c1bb SHA1 923e37e45f6f9182bb615d96d42734b0f496e5b5 SHA256 0c9869ef548e954824d80ec1c790c3c0448d2b7df2cc507ac02fe19898f8fac1
-EBUILD aufs-20071125.ebuild 4161 RMD160 16baddabd05ff60fd06919aeb41e63231b00e879 SHA1 7b32cd87e6313ecbbc12059ab9d454f5d46b252f SHA256 1bd27dd15c2b636c86c1b34708e64b46b7d4487fe3975f7af41f1ab053f38220
-MISC ChangeLog 1852 RMD160 5a50e846a99c2895154973f261212215e2aef1d3 SHA1 7da657c14969455547eb8e86cc1de094f656d23f SHA256 71663599aa9814cc1925656c322254efa5fb20bf4fe2b599fa9ba31f38e1e398
+EBUILD aufs-20071125.ebuild 2500 RMD160 d74f0370d4e3b8aeb993832d718a33151d1edcab SHA1 428946954a7bfcc8023e01a624807a5009c88287 SHA256 c2b7f63ac14cb3cf3184ff300c317ce61ebcf9014cdb7735ae30411e854593ea
+MISC ChangeLog 1946 RMD160 d4729dddc53a2b502b4918ab62ca1473848f0b93 SHA1 b00525edf7919a465ccae6ba87fb5b9a59d9bc92 SHA256 5987a8ccef68067029d4842becb0dd215fff7ee65c1631a9da90b1a3a4789673
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
