@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Dec 2007; (Tommy[D]) tommy100@gmx.de aufs-20071125.ebuild:
+  Drop ksize and lhash patch
+
   26 Nov 2007; (Tommy[D]) tommy100@gmx.de -files/aufs-20070212-ksize.patch,
   -files/aufs-20070212-lhash.patch, -files/aufs-20070402-ksize.patch,
   -files/aufs-20070402-lhash.patch, +aufs-20070402.ebuild:
